FIX: wrap website related css with website container element

--- a/src/views/Content/WebSitePages/DownloadPage/style.scss
+++ b/src/views/Content/WebSitePages/DownloadPage/style.scss
@@ -1,7 +1,9 @@
-.download-page {
-  @apply w-full;
+.app-container {
+  .download-page {
+    @apply w-full;
 
-  &-container {
-    @apply bg-white w-full h-full flex text-center justify-center text-xl;
+    &-container {
+      @apply bg-white w-full h-full flex text-center justify-center text-xl;
+    }
   }
 }
