--- a/src/views/Layout/WebSite/Footer/style.scss
+++ b/src/views/Layout/WebSite/Footer/style.scss
@@ -1,97 +1,99 @@
-.footer {
-  &-container {
-    @apply flex w-full m-auto;
+.app-container {
+  .footer {
+    &-container {
+      @apply flex w-full m-auto;
 
-    nav {
-      @apply pt-[3.125rem] pb-[3.125rem] w-[73.125rem] flex flex-col m-auto;
-      @apply md:pt-20;
+      nav {
+        @apply pt-[3.125rem] pb-[3.125rem] w-[73.125rem] flex flex-col m-auto;
+        @apply md:pt-20;
 
-      .top {
-        @apply flex flex-col px-4 py-0;
-        @apply md:flex-row md:p-0;
+        .top {
+          @apply flex flex-col px-4 py-0;
+          @apply md:flex-row md:p-0;
 
-        & .logo-container {
-          @apply w-1/6 min-h-max;
-          @apply md:min-h-[21.625rem];
-        }
-
-        & .footer-menu {
-          @apply grid w-full;
-          @apply md:grid-cols-3 md:mt-5 md:w-1/2;
-        }
-      }
-
-      .bottom {
-        @apply mt-auto pt-4;
-
-        &-section {
-          @apply pl-4 w-full flex justify-between;
-
-          & > * {
-            @apply w-1/2;
+          & .logo-container {
+            @apply w-1/6 min-h-max;
+            @apply md:min-h-[21.625rem];
           }
 
-          .copyright {
-            @apply mr-4 block w-max ml-auto;
+          & .footer-menu {
+            @apply grid w-full;
+            @apply md:grid-cols-3 md:mt-5 md:w-1/2;
+          }
+        }
 
-            span {
-              @apply text-[.625rem] pl-[1em] ml-auto block w-max py-0;
+        .bottom {
+          @apply mt-auto pt-4;
+
+          &-section {
+            @apply pl-4 w-full flex justify-between;
+
+            & > * {
+              @apply w-1/2;
+            }
+
+            .copyright {
+              @apply mr-4 block w-max ml-auto;
+
+              span {
+                @apply text-[.625rem] pl-[1em] ml-auto block w-max py-0;
+              }
+            }
+          }
+
+          &-item {
+            @apply text-[.625rem] py-[1em] px-0 mr-6;
+          }
+
+          .country {
+            @apply flex w-max ml-auto;
+            @apply mr-4;
+
+            svg {
+              @apply mr-2;
+            }
+
+            &-name {
+              @apply text-[.625rem];
             }
           }
         }
+      }
+    }
 
-        &-item {
-          @apply text-[.625rem] py-[1em] px-0 mr-6;
+    &-menu {
+      .menu {
+        &-column {
+          @apply h-max;
         }
 
-        .country {
-          @apply flex w-max ml-auto;
-          @apply mr-4;
-
-          svg {
-            @apply mr-2;
+        &-row {
+          &-title {
+            @apply block mt-[3.125rem] mb-[1.375rem] tracking-[.08em] text-gray-100 text-xs font-black leading-6 uppercase;
+            @apply md:my-0;
           }
 
-          &-name {
-            @apply text-[.625rem];
+          &-content {
+            @apply mt-5 flex flex-col;
+            @apply md:h-full;
+
+            .title {
+              @apply block mb-4;
+            }
           }
         }
       }
     }
-  }
 
-  &-menu {
-    .menu {
-      &-column {
-        @apply h-max;
+    &-social {
+      @apply mt-[7.5rem] grid grid-cols-3 gap-4 mr-auto;
+      @apply md:ml-auto md:mr-0 md:mt-0;
+
+      .icon {
+        @apply w-[2.75rem] h-[2.75rem] bg-gray-300 rounded-full cursor-pointer flex justify-center items-center;
+        @apply hover:text-green-100;
+        @apply md:w-14 md:h-14;
       }
-
-      &-row {
-        &-title {
-          @apply block mt-[3.125rem] mb-[1.375rem] tracking-[.08em] text-gray-100 text-xs font-black leading-6 uppercase;
-          @apply md:my-0;
-        }
-
-        &-content {
-          @apply mt-5 flex flex-col;
-          @apply md:h-full;
-
-          .title {
-            @apply block mb-4;
-          }
-        }
-      }
-    }
-  }
-
-  &-social {
-    @apply mt-[7.5rem] grid grid-cols-3 gap-4 mr-auto;
-    @apply md:ml-auto md:mr-0 md:mt-0;
-
-    .icon {
-      @apply w-[2.75rem] h-[2.75rem] bg-gray-300 rounded-full cursor-pointer flex justify-center items-center;
-      @apply hover:text-green-100;
-      @apply md:w-14 md:h-14;
     }
   }
 }
